<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/bgyellow"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/parnter_man">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/man"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white" />
        <ImageView
            android:id="@+id/parnterfrag_iv_man"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"/>
        <Spinner
            android:id="@+id/parnterfrag_sp_man"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/parnter_woman">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/woman"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white" />
        <ImageView
            android:id="@+id/parnterfrag_iv_woman"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"/>
        <Spinner
            android:id="@+id/parnterfrag_sp_woman"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="16sp"
        android:text="@string/parnter_info"/>

    <Button
        android:id="@+id/parnterfrag_btn_prize"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/parnter_btn_prize"
        android:layout_gravity="center"
        android:background="@drawable/dock"
        android:layout_marginTop="150dp"/>

    <Button
        android:id="@+id/parnterfrag_btn_analysls"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/parnter_btn_analysls"
        android:background="@drawable/dock"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>